fix typo whoops :)

--- a/theme.css
+++ b/theme.css
@@ -101,7 +101,7 @@ settings:
             value: ctp-accent-blue
         - 
             label: Lavender
-            value: ctp-accent-Lavender
+            value: ctp-accent-lavender
   - 
     id: anp-layout-section-header
     title: Layout settings
