--- a/theme.css
+++ b/theme.css
@@ -1066,7 +1066,7 @@ hr {
     background-color: rgba(var(--ctp-text), 0.1);
 }
 .anp-full-rainbow-color-toggle:not(.is-grabbing) .nav-folder.mod-root > .nav-folder-children > .nav-file .nav-file-title:hover {
-  background-color: rgba(var(--ctp-accent), 0.3);
+  background-color: rgba(255, 255, 255, 0.1);
 }
 .anp-full-rainbow-color-toggle .nav-folder.mod-root > .nav-folder-children > .nav-folder .nav-folder-children {
   border-color: rgba(var(--ctp-crust), 0.4);
@@ -1307,4 +1307,47 @@ hr {
   padding-top: 5px;
   padding-bottom: 5px;
   border-radius: 4px;
+}
+/*----------EXCALIDRAW-----------*/
+.theme-light .excalidraw, .theme-dark .excalidraw, .theme-dark .excalidraw.theme--dark, .theme-light .excalidraw.theme--dark {
+  --button-destructive-bg-color: rgba(var(--ctp-red), 0.2);
+  --button-destructive-color: rgb(var(--ctp-red));
+  --button-gray-1: rgb(var(--ctp-base));
+  --button-gray-2: rgb(var(--ctp-mantle));
+  --button-gray-3: rgb(var(--ctp-crust));
+  --button-special-active-bg-color: rgb(var(--ctp-base));
+  --dialog-border-color: rgb(var(--ctp-surface1));
+  --focus-highlight-color: rgb(var(--ctp-accent, --ctp-teal));
+  --icon-fill-color: var(--text-normal);
+  --icon-green-fill-color: rgb(var(--ctp-green));
+  --default-bg-color: rgb(var(--ctp-base));
+  --input-bg-color: rgb(var(--ctp-mantle));
+  --input-border-color: rgb(var(--ctp-surface1));
+  --input-hover-bg-color: rgb(var(--ctp-surface0));
+  --input-label-color: rgb(var(--ctp-text));
+  --island-bg-color: rgba(var(--ctp-base), 0.96);
+  --keybinding-color: rgb(var(--ctp-crust));
+  --link-color: var(--color-accent);
+  --overlay-bg-color: rgba(var(--ctp-base), 0.88);
+  --popup-bg-color: rgb(var(--ctp-base));
+  --popup-secondary-bg-color: rgb(var(--ctp-mantle));
+  --popup-text-color: rgb(var(--ctp-text));
+  --popup-text-inverted-color: rgb(var(--ctp-base));
+  --select-highlight-color: var(--color-accent);
+  --shadow-island: 0 0 0 1px rgba(var(--ctp-text), 0.01), 1px 1px 5px rgb(var(--ctp-text) / 12%);
+  --text-primary-color: rgb(var(--ctp-text));
+  --color-primary: var(--color-accent);
+  --color-primary-darker: var(--color-accent);
+  --color-primary-darkest: var(--color-accent);
+  --color-primary-light: rgb(var(--ctp-base));
+}
+.excalidraw .ToolIcon--plain,
+.excalidraw .reset-zoom-button,
+.excalidraw .ToolIcon[aria-label="Zoom in"],
+.excalidraw .ToolIcon[aria-label="Zoom out"],
+.excalidraw .ToolIcon[aria-label="Reset the canvas"]  {
+  background-color: rgb(var(--ctp-crust)) !important;
+}
+[data-type="excalidraw"] .view-header {
+  margin: 0;
 }
