--- a/src/modules/Plugins/index.scss
+++ b/src/modules/Plugins/index.scss
@@ -4,3 +4,5 @@
 @import "excalidraw.scss";
 @import "foldericons.scss";
 @import "advanced-tables.scss";
+@import "cMenu.scss";
+@import "discordrpc.scss";
