--- a/src/modules/default-variables.scss
+++ b/src/modules/default-variables.scss
@@ -140,5 +140,5 @@ body {
   --anp-preview-width-max: 800px;
   --anp-header-margin-value: 10px;
   --anp-header-font: "Noto Serif";
-  --tab-stacked-pane-width: calc(var(--anp-tab-stacked-pane-width) - calc(var(--tab-stacked-header-width)*2));
+  --tab-stacked-pane-width: var(--file-line-width);
 }
