--- a/theme.css
+++ b/theme.css
@@ -47,6 +47,9 @@ settings:
             - 
                 label: Mocha
                 value: ctp-mocha
+            - 
+                label: Mocha Old
+                value: ctp-mocha-old
     - 
         id: anuppuccin-accent-toggle
         title: Force catppuccin accents
@@ -141,7 +144,6 @@ settings:
     -
         id: anp-alt-tab-style
         title: Tab style
-        description: Tab styles
         type: class-select
         allowEmpty: false
         default: anp-default-tab
@@ -411,13 +413,21 @@ settings:
         level: 1
         collapsed: true
     -
-        id: anp-full-rainbow-color-toggle
-        title: Toggle to enable full folder theme
-        type: class-toggle
-    - 
-        id: anp-simple-rainbow-color-toggle
-        title: Toggle to enable simple folder theme
-        type: class-toggle
+        id: anp-alt-rainbow-style
+        title: Rainbow style
+        type: class-select
+        allowEmpty: false
+        default: anp-default-rainbow
+        options:
+            - 
+                label: None
+                value: anp-default-rainbow
+            - 
+                label: Full
+                value: anp-full-rainbow-color-toggle
+            - 
+                label: Simple
+                value: anp-simple-rainbow-color-toggle
     - 
         id: anp-full-rainbow-folder-settings
         title: Full folder theme settings
@@ -612,6 +622,35 @@ settings:
   --ctp-base: 30, 30, 46;
   --ctp-mantle: 24, 24, 37;
   --ctp-crust: 17, 17, 27;
+}
+
+.theme-dark.ctp-mocha-old {
+  --ctp-rosewater: 245, 224, 220;
+  --ctp-flamingo: 242, 205, 205;
+  --ctp-pink: 245, 194, 231;
+  --ctp-mauve: 203, 166, 247;
+  --ctp-red: 243, 139, 168;
+  --ctp-maroon: 235, 160, 172;
+  --ctp-peach: 250, 179, 135;
+  --ctp-yellow: 249, 226, 175;
+  --ctp-green: 166, 227, 161;
+  --ctp-teal: 148, 226, 213;
+  --ctp-sky: 137, 220, 235;
+  --ctp-sapphire: 116, 199, 236;
+  --ctp-blue: 135, 176, 249;
+  --ctp-lavender: 180, 190, 254;
+  --ctp-text: 217, 224, 238;
+  --ctp-subtext1: 211, 205, 214;
+  --ctp-subtext0: 190, 179, 193;
+  --ctp-overlay2: 167, 156, 176;
+  --ctp-overlay1: 152, 139, 162;
+  --ctp-overlay0: 109, 107, 125;
+  --ctp-surface2: 87, 82, 105;
+  --ctp-surface1: 45, 40, 72;
+  --ctp-surface0: 48, 45, 65;
+  --ctp-base: 30, 30, 46;
+  --ctp-mantle: 26, 24, 38;
+  --ctp-crust: 22, 19, 32;
 }
 
 /*------------------Selecting Accents-------------------*/
