--- a/theme.css
+++ b/theme.css
@@ -119,6 +119,19 @@ settings:
         level: 2
         collapsed: true
     - 
+        id: anp-layout-select
+        title: Layout variant
+        type: class-select
+        allowEmpty: false
+        default: anp-default-layout
+        options:
+            -
+                label: Default
+                value: anp-default-layout
+            -
+                label: Cards
+                value: anp-card-layout
+    - 
         id: anp-color-transition-toggle
         title: Color transition toggle (WIP)
         description: "Adds a transition when switching palettes, looks really neat :)"
@@ -970,6 +983,113 @@ body {
 .mod-community-theme summary h1:first-child, .mod-community-theme summary h2:first-child, .mod-community-theme summary h3:first-child, .mod-community-theme summary h4:first-child, .mod-community-theme summary h5:first-child, .mod-community-theme summary h6:first-child {
   margin-top: -24px !important;
   margin-left: 24px !important;
+}
+
+body.anp-card-layout,
+.anp-card-layout .sidebar-toggle-button,
+.anp-card-layout .workspace-tabs.mod-top {
+  --tab-container-background: var(--titlebar-background) !important;
+}
+
+body.is-focused.anp-card-layout,
+body.is-focused.anp-card-layout .sidebar-toggle-button,
+body.is-focused.anp-card-layout .workspace-tabs.mod-top {
+  --tab-container-background: var(--titlebar-background) !important;
+}
+
+.anp-card-layout .mod-left-split .workspace-tab-header-container {
+  border-bottom: none;
+}
+
+.anp-card-layout .mod-left-split .workspace-tabs .workspace-leaf,
+.anp-card-layout .mod-right-split .workspace-tabs .workspace-leaf,
+.anp-card-layout .mod-left-split,
+.anp-card-layout .mod-vertical .workspace-tab-container,
+.anp-card-layout .mod-vertical,
+.anp-card-layout .workspace-split.mod-vertical,
+.anp-card-layout .workspace-fake-target-overlay:not(.is-in-sidebar) .workspace-tabs .workspace-leaf,
+.anp-card-layout .mod-root .workspace-tabs .workspace-leaf {
+  background-color: var(--tab-container-background);
+}
+
+.anp-card-layout .workspace-ribbon.mod-left {
+  padding: 0;
+  background-color: var(--tab-container-background);
+  border: none;
+}
+
+.anp-card-layout .workspace-ribbon.mod-left:before {
+  border-bottom: none;
+}
+
+.anp-card-layout .side-dock-actions {
+  padding: var(--ribbon-padding);
+  border-radius: 0px var(--radius-xl) var(--radius-xl) 0px;
+  border: 1px solid var(--tab-outline-color);
+  background-color: var(--background-primary);
+}
+
+.anp-card-layout .side-dock-settings {
+  padding: var(--ribbon-padding);
+  border-radius: 0px var(--radius-xl) 0px 0px;
+  border: 1px solid var(--tab-outline-color);
+  background-color: var(--background-primary);
+}
+
+.anp-card-layout .workspace-ribbon.mod-left {
+  margin-top: calc(var(--header-height) - 1px);
+}
+
+.anp-card-layout .workspace-tab-header-container {
+  border-bottom: none;
+}
+
+.anp-card-layout .mod-vertical .workspace-tab-header-container {
+  padding-left: 20px;
+}
+
+.anp-card-layout .mod-vertical .workspace-tab-header-container-inner {
+  margin: 6px -5px calc(var(--tab-outline-width) * -1);
+  z-index: 1;
+}
+
+.anp-card-layout .mod-vertical .workspace-tabs {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.anp-card-layout .mod-left-split .workspace-tab-container,
+.anp-card-layout .mod-right-split .workspace-tab-container {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: var(--tab-container-background);
+}
+
+.anp-card-layout .workspace-split.mod-left-split > .workspace-leaf-resize-handle,
+.anp-card-layout .workspace-split.mod-right-split > .workspace-leaf-resize-handle {
+  border-left-style: dashed;
+  border-right: none;
+  border-width: 1px;
+}
+
+.anp-card-layout .workspace-split.mod-horizontal > * > .workspace-leaf-resize-handle {
+  border-style: dashed;
+  border-color: var(--tab-outline-color);
+  border-width: 2px 0px 0px 0px !important;
+  height: 0px !important;
+  width: 30%;
+  margin-left: 35% !important;
+}
+
+.anp-card-layout .workspace-split .workspace-leaf-content {
+  border-radius: var(--radius-xl);
+  background-color: var(--background-primary);
+  border: 1px solid var(--tab-outline-color);
+  margin-bottom: 10px;
+}
+
+.anp-card-layout .workspace-split.mod-horizontal > * {
+  width: unset;
 }
 
 /*-Custom hr margins-*/
