--- a/src/modules/style-settings.scss
+++ b/src/modules/style-settings.scss
@@ -106,6 +106,13 @@ settings:
                 label: Lavender
                 value: ctp-accent-lavender
     - 
+        id: anuppuccin-extended-colorschemes-link
+        title: Extended colorschemes
+        description: "Download and use the extended colorschemes snippet if you haven't already! (https://github.com/AnubisNekhet/AnuPpuccin/blob/main/snippets/extended-colorschemes.css)"
+        type: heading
+        level: 2
+        collapsed: true
+    - 
         id: anp-layout-section-header
         title: Layout settings
         type: heading
