Add fix for card layout corner

--- a/src/modules/UI/layouts.scss
+++ b/src/modules/UI/layouts.scss
@@ -21,6 +21,9 @@ body.is-focused.anp-card-layout .workspace-tabs.mod-top {
 .anp-card-layout .mod-root .workspace-tabs .workspace-leaf {
     background-color: var(--tab-container-background);
 }
+.anp-card-layout .workspace-ribbon.mod-left:before {
+    background-color: var(--tab-container-background) !important;
+}
 .anp-card-layout .workspace-ribbon.mod-left {
     padding: 0;
     background-color: var(--tab-container-background);
@@ -42,7 +45,7 @@ body.is-focused.anp-card-layout .workspace-tabs.mod-top {
     background-color: var(--background-primary);
 }
 .anp-card-layout .workspace-ribbon.mod-left {
-    margin-top: calc(var(--header-height) - 1px);
+    margin-top: calc(var(--header-height) - 1px) !important;
 }
 .anp-card-layout .workspace-tab-header-container {
     border-bottom: none;
