--- a/snippets/extended-colorschemes.css
+++ b/snippets/extended-colorschemes.css
@@ -36,6 +36,15 @@ settings:
     default: ctp-nord-dark
     options:
         -
+            label: AMOLED Dark
+            value: ctp-amoled-dark
+        -
+            label: Coffee
+            value: ctp-coffee-dark
+        -
+            label: Dark (Generic)
+            value: ctp-generic-dark
+        -
             label: Dracula
             value: ctp-dracula
         -
@@ -339,4 +348,88 @@ settings:
   --ctp-base: 249,245,215;
   --ctp-mantle: 236, 225, 196;
   --ctp-crust: 230, 215, 178;
+}
+.theme-dark.anp-theme-ext-dark.ctp-coffee-dark {
+  --ctp-rosewater: 236, 222, 213;
+  --ctp-flamingo: 234, 195, 214;
+  --ctp-pink: 234, 159, 194;
+  --ctp-mauve: 215, 159, 234;
+  --ctp-red: 234, 159, 159;
+  --ctp-maroon: 234, 169, 159;
+  --ctp-peach: 234, 178, 159;
+  --ctp-yellow: 234, 201, 159;
+  --ctp-green: 174, 213, 165;
+  --ctp-teal: 164, 234, 192;
+  --ctp-sky: 174, 224, 206;
+  --ctp-sapphire: 163, 225, 235;
+  --ctp-blue: 163, 200, 235;
+  --ctp-lavender: 182, 186, 226;
+  --ctp-text: 250, 218, 195;
+  --ctp-subtext1: 247, 204, 172;
+  --ctp-subtext0: 235, 192, 160;
+  --ctp-overlay2: 199, 163, 136;
+  --ctp-overlay1: 173, 144, 124;
+  --ctp-overlay0: 120, 102, 96;
+  --ctp-surface2: 94, 84, 86;
+  --ctp-surface1: 85, 77, 82;
+  --ctp-surface0: 76, 70, 78;
+  --ctp-base: 58, 56, 69;
+  --ctp-mantle: 47, 46, 56;
+  --ctp-crust: 38, 37, 45;
+}
+.theme-dark.anp-theme-ext-dark.ctp-generic-dark {
+  --ctp-rosewater: 245, 224, 220;
+  --ctp-flamingo: 242, 205, 205;
+  --ctp-pink: 245, 194, 231;
+  --ctp-mauve: 203, 166, 247;
+  --ctp-red: 243, 139, 168;
+  --ctp-maroon: 235, 160, 172;
+  --ctp-peach: 250, 179, 135;
+  --ctp-yellow: 249, 226, 175;
+  --ctp-green: 166, 227, 161;
+  --ctp-teal: 148, 226, 213;
+  --ctp-sky: 137, 220, 235;
+  --ctp-sapphire: 116, 199, 236;
+  --ctp-blue: 135, 176, 249;
+  --ctp-lavender: 180, 190, 254;
+  --ctp-text: 255, 255, 255;
+  --ctp-subtext1: 210, 210, 210;
+  --ctp-subtext0: 189, 189, 189;
+  --ctp-overlay2: 168, 168, 168;
+  --ctp-overlay1: 147, 147, 147;
+  --ctp-overlay0: 126, 126, 126;
+  --ctp-surface2: 105, 105, 105;
+  --ctp-surface1: 84, 84, 84;
+  --ctp-surface0: 63, 63, 63;
+  --ctp-base: 42, 42, 42;
+  --ctp-mantle: 21, 21, 21;
+  --ctp-crust: 0, 0, 0;
+}
+.theme-dark.anp-theme-ext-dark.ctp-amoled-dark {
+  --ctp-rosewater: 245, 224, 220;
+  --ctp-flamingo: 242, 205, 205;
+  --ctp-pink: 245, 194, 231;
+  --ctp-mauve: 203, 166, 247;
+  --ctp-red: 243, 139, 168;
+  --ctp-maroon: 235, 160, 172;
+  --ctp-peach: 250, 179, 135;
+  --ctp-yellow: 249, 226, 175;
+  --ctp-green: 166, 227, 161;
+  --ctp-teal: 148, 226, 213;
+  --ctp-sky: 137, 220, 235;
+  --ctp-sapphire: 116, 199, 236;
+  --ctp-blue: 135, 176, 249;
+  --ctp-lavender: 180, 190, 254;
+  --ctp-text: 255, 255, 255;
+  --ctp-subtext1: 210, 210, 210;
+  --ctp-subtext0: 189, 189, 189;
+  --ctp-overlay2: 168, 168, 168;
+  --ctp-overlay1: 147, 147, 147;
+  --ctp-overlay0: 126, 126, 126;
+  --ctp-surface2: 80, 80, 80;
+  --ctp-surface1: 50, 50, 50;
+  --ctp-surface0: 30, 30, 30;
+  --ctp-base: 10, 10, 10;
+  --ctp-mantle: 5, 5, 5;
+  --ctp-crust: 0, 0, 0;
 }
